# SOMA

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  abstract_specification.md  brainstorming.md  pyproject.toml  reorg-proposal.md  setup.py  specification.md
.github/workflows/: python-somacore.yaml
.pre-commit/: format-check.sh
python-spec/: .gitignore  README.md  pyproject.toml  requirements-py3.10.txt  requirements-py3.11.txt  requirements-py3.12-lint.txt  requirements-py3.12.txt  requirements-py3.13.txt  requirements-py3.7-lint.txt  requirements-py3.7.txt  requirements-py3.8-lint.txt  requirements-py3.8.txt  requirements-py3.9-lint.txt  requirements-py3.9.txt  setup.py  setuptools-scm.toml  update-requirements-txt  write-version-file
python-spec/src/somabase/: __init__.py  _wrap.py  base.py  composed.py  data.py  options.py
python-spec/src/somacore/: __init__.py  _mixin.py  _version.py  _wrap.py  base.py  collection.py  composed.py  coordinates.py  data.py  ephemeral.py  experiment.py  images.py  measurement.py  options.py  pyramid.py  scene.py  spatial.py  spatialdata.py  types.py
python-spec/src/somacore/ephemeral/: __init__.py  collections.py
python-spec/src/somacore/query/: __init__.py  _eager_iter.py  _fast_csr.py  axis.py  eager_iter.py  fast_csr.py  query.py  scene_query.py  types.py
python-spec/testing/: test_collection.py  test_coordinates.py  test_eager_iter.py  test_ephemeral.py  test_mixin.py  test_query_axis.py  test_types.py  test_wrap.py
python-spec/tests/: test_query_axis.py
rfcs/: README.md  profiler.md  soma_joinid_id_or_index.md
