[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "somacore"
description = "Python-language API specification and base utilities for implementation of the SOMA system."
dynamic = ["version"]
readme = "./README.md"
dependencies = ["attrs>=22.1", "pyarrow", "typing-extensions"]
requires-python = "~=3.7"

[project.optional-dependencies]
dev = ["black", "isort", "setuptools-scm"]

[tool.setuptools]
packages.find.where = ["src"]
package-data.somacore = ["py.typed"]
dynamic.version.attr = "somacore._version.version"


[tool.isort]
profile = "black"
line_length = 88
force_single_line = true
single_line_exclusions = ["typing", "typing_extensions"]

[[tool.mypy.overrides]]
# pyarrow currently does not have canonical type stubs.
module = ["pyarrow"]
ignore_missing_imports = true
