[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "somacore"
description = "Python-language API specification and base utilities for implementation of the SOMA system."
dynamic = ["version"]
readme = "./README.md"
dependencies = [
  "anndata",
  "attrs>=22.1",
  "numpy>=1.21",
  "pyarrow",
  "typing-extensions",
]
requires-python = "~=3.7"
urls = { repository = "https://github.com/single-cell-data/SOMA.git" }
classifiers = ["License :: OSI Approved :: MIT License"]

[project.optional-dependencies]
dev = ["black", "isort", "setuptools-scm"]

[tool.setuptools]
packages.find.where = ["src"]
package-data.somacore = ["py.typed"]
dynamic.version.attr = "somacore._version.version"

[tool.isort]
profile = "black"
line_length = 88
force_single_line = true
single_line_exclusions = ["typing", "typing_extensions"]

[[tool.mypy.overrides]]
# These dependencies do not currently have canonical type stubs.
module = ["anndata", "pyarrow"]
ignore_missing_imports = true
